<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button7"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/bungee"
        android:text="@string/medical_id"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/bungee"
        android:text="@string/vitals"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bungee"
        android:text="@string/health_data"
        android:textColor="@color/colorAccent"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="283dp"
        android:layout_height="181dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/bungee"
        android:text="@string/activity1"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/bungee"
        android:text="@string/body_measurements"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@android:color/white"
        android:fontFamily="@font/bungee"
        android:text="@string/log_out" />

</RelativeLayout>